examples/illTyped/symbolSymbolMismatch2.bgl
game G

type TX = {X}
type TO = {O}

-- The type {X, O} has not been declared so the if expression should fail to type check
-- The let expression is used to ensure that the failure is not due to a signature mismatch
a : Int
a = let discard = if True then X else O in 42
